--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "back-end",
+  "name": "base-backend",
   "version": "1.0.0",
-  "description": "trabalho de eng de software",
+  "description": "Projeto de base para backend em NodeJs, Express e MongoDB para a CompJunior",
   "main": "./src/index.js",
   "scripts": {
-    "serve": "nodemon --exec ./src/index.js"
+    "build": "babel ./src -d dist",
+    "serve": "nodemon --exec babel-node ./src/index.js"
   },
   "author": "nois",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "sucrase": "^3.17.0"
+    "mongoose": "^5.9.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.9.0",
+    "babel-plugin-inline-json-import": "^0.3.2",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "nodemon": "^2.0.2"
   }
 }
