--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -10,8 +10,12 @@
   "author": "nois",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-server": "^0.12.3",
     "mongoose": "^5.9.6"
   },
   "devDependencies": {
