--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -2,13 +2,15 @@
   "name": "front-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "nodemon --exec babel-node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "babel": "^6.23.0",
+    "nodemon": "^2.0.7"
   }
 }
