--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -12,5 +12,8 @@
     "axios": "^0.21.1",
     "babel": "^6.23.0",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
