--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base-backend",
   "version": "1.0.0",
-  "description": "Projeto de base para backend em NodeJs, Express e MongoDB para a CompJunior",
+  "description": "Projeto de base para backend em NodeJs",
   "main": "./src/index.js",
   "scripts": {
     "build": "babel ./src -d dist",
