--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "build": "babel ./src -d dist",
-    "serve": "nodemon --exec babel-node ./src/index.js"
+    "serve": "nodemon --exec babel-node ./src/index.js",
+    "test": "jest"
   },
   "author": "nois",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-server": "^0.12.3",
+    "jest": "^26.6.3",
     "mongoose": "^5.9.6"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "babel-plugin-inline-json-import": "^0.3.2",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
